# 2014

./: AutoModes.xls  ControllerLayout.ppt  IO Assignment.xls  README.md
2011Robot/: 2011 Robot.aliases  2011 Robot.lvlps  2011 Robot.lvproj  Autonomous Independent.vi  Begin.vi  Periodic Tasks.vi  Robot Global Data.vi  Robot Main.vi  Teleop.vi  Test.vi  Vision Processing.vi
2014 Pre season/: build.xml
BobcatRobot2014/: build.xml
Dashboard/: 2014 Dashboard Project.aliases  2014 Dashboard Project.lvlps  2014 Dashboard Project.lvproj  Dashboard Main.vi
EncoderTesting/: build.xml
LabVIEW/: 2014 Robot Project.aliases  2014 Robot Project.lvlps  2014 Robot Project.lvproj  AutoCrossCourt.vi  AutoDrive.vi  AutoDriveCmds.ctl  AutoDriveForward.vi  AutoDriveModes.ctl  AutoMultiBall.vi  AutoMultiBallStates.ctl  AutoTurnToHot.vi  AutoTurnToHotFromCenter.vi  AutoTurnToHotStates.ctl  AutoWaitForHot.vi  AutoWaitForHotStates.ctl  Autonomous Data.ctl  Autonomous Independent.vi  Begin.vi  CheeseRecive.vi  CheeseReciveUDP.vi  CountTargets.vi  DTReport.vi  Disabled.vi  DriveDistanceAngle.vi  DriveToXY.vi  EncoderCmds.ctl  EncoderOffset.vi  Fire.vi  GetAutoMode.vi  GetShooterRefs.vi  Hot.vi  Periodic Tasks.vi  PiShutdown.vi  PickupSoftStartStates.ctl  Position Typedef.ctl  Position.vi  RPiReceive.vi  Robot Global Data.vi  Robot Main.vi  RollerSoftStart.vi  (+19 more)
Vision/: CurlUtils.cpp  CurlUtils.h  GetImages.cpp  Makefile  Receive.cpp  (+3 more)
Vision/picam/: CMakeLists.txt  GetImages.cpp  PiCam.cpp  PiCam.hpp  Receive.cpp  RecordMatch  Send.cpp  VisionServer.cpp  VisionServer.h  WebServer.cpp
(+17 files in other folders)
